fixed listMedicalCaresService
