# backend/src/modules/medicalCares/dtos/IListMedicalCaresWithFilterDTO.ts
@@ -1,0 +1,7 @@
+export default interface IListMedicalCaresWithFilterDTO {
+    client_id?: any;
+    specialist_id?: any;
+    appointment_date?: any;
+    date?: any;
+    status?: any;
+}
