# backend/src/modules/medicalCares/infra/typeorm/entities/MedicalCare.ts
@@ -1,4 +1,7 @@
-import { Column, CreateDateColumn, Entity, PrimaryGeneratedColumn, UpdateDateColumn } from "typeorm";
+import Client from "@modules/clients/infra/typeorm/entities/Client";
+import MedicalRecordHistoric from "@modules/medicalRecords/infra/typeorm/entities/MedicalRecordHistoric";
+import Specialist from "@modules/specialists/infra/typeorm/entities/Specialist";
+import { Column, CreateDateColumn, Entity, JoinColumn, ManyToOne, OneToOne, PrimaryGeneratedColumn, UpdateDateColumn } from "typeorm";
 
 @Entity('medicalCares')
 class MedicalCare {
@@ -22,6 +25,17 @@ class MedicalCare {
 
     @Column()
     specialist_id: string;
+
+    @ManyToOne(() => Client, client => client.medicalCares)
+    @JoinColumn({name: 'client_id'})
+    client: Client;
+
+    @ManyToOne(() => Specialist, specialist => specialist.medicalCares)
+    @JoinColumn({name: 'specialist_id'})
+    specialist: Specialist;
+
+    @OneToOne(() => MedicalRecordHistoric, medicalRecordHistoric => medicalRecordHistoric.medicalCare)
+    medicalRecordHistoric: MedicalRecordHistoric;
 
     @CreateDateColumn()
     created_at: Date;
