# backend/src/modules/medicalRecords/dtos/ICreateMedicalRecordHistoricDTO.ts
@@ -2,4 +2,6 @@ export default interface ICreateMedicalRecordHistoricDTO {
     date: Date;
     description: string;
     medical_record_id: string;
+    specialist_id: string;
+    medical_care_id: string;
 }
